@@ -4,6 +4,7 @@ oi-bus (0.1.12) UNRELEASED; urgency=medium
   * Fix a few HTTP 500 errors
   * Add oi {upload,download,backupzaw} subcommands
   * Add oi {update,backup} subcommands
+  * Add oi {shutdown,wake} subcommands
 
  -- Wojciech Dubiel <w.dubiel@fri.edu.pl>  Sun, 02 Feb 2020 20:01:22 +0100
 
